Bug 39347 - Dots inside quoted sentences get removed on "Correct All"
Summary: Dots inside quoted sentences get removed on "Correct All"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: riesslibo
URL:
Whiteboard:
Keywords:
: 41251 (view as bug list)
Depends on:
Blocks: 50476
  Show dependency treegraph
 
Reported: 2011-07-18 11:15 UTC by andre.pietsch
Modified: 2012-05-29 14:26 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Test doc to reproduce bug (9.69 KB, application/vnd.oasis.opendocument.text)
2011-07-20 03:44 UTC, andre.pietsch
Details
a new example, where the fix is not working in the same paragraph (9.34 KB, application/vnd.oasis.opendocument.text)
2012-05-21 09:42 UTC, riesslibo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andre.pietsch 2011-07-18 11:15:36 UTC
Use German Hunspell.

Enter this NONSENSE sentence (including the leading and trailing quote characters):

"Wenn ich diesen Fehler testen Huhnd würde, würde ich jetzt einen Satz schreiben Huhnd."

'Huhnd' is a misspelled form of 'Huhn' which means 'chicken'. Hit F7 for spell checking and click on "Correct all".

The sentence is corrected to this:

"Wenn ich diesen Fehler testen Huhn würde, würde ich jetzt einen Satz schreiben Huhn"

While the sentence still does not make sense, note that the trailing dot after the second 'Huhn' is removed erroneously.
Comment 1 Rainer Bielefeld Retired 2011-07-19 01:17:25 UTC
[Reproducible] with reporter's sample and "LibreOffice 3.4.1  - WIN7  Home Premium (64bit) German UI [OOO340m1 (Build:103)]", even without quotation marks.

Also visible with Master "LibO-dev 3.4.5  – WIN7  Home Premium  (64bit) English UI
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"
and English text / english spell check.

@andre:
I can confirm the problem with dot deleting by "Correct All", but I also see that without quotation marks. Do I observe something different or has behavior changed between 3.3.0 and 3.4.1?
Can you please attach a sample document?
What's your OS?
Comment 2 andre.pietsch 2011-07-20 03:43:42 UTC
I can reproduce it without quotation marks, too.

I'm Ubuntu 11.04 with LibO 3.3.2

Testdoc follows.
Comment 3 andre.pietsch 2011-07-20 03:44:41 UTC
Created attachment 49335 [details]
Test doc to reproduce bug
Comment 4 Rainer Bielefeld Retired 2011-07-20 03:58:09 UTC
@Caolán:
Is this your area?
Comment 5 Caolán McNamara 2011-10-19 03:50:50 UTC
I guess nothing and everything is my area.

This should fix it.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecf8ed8eed580cfbfa6b32a51dbdbed6cf556659

i.e. do the same on change all as on change. I'm a bit dubious about our code which splits up sentences into words, so that could do with a rework, especially for languages like Hebrew and Maltese which can have embedded " and other marks inside words, but this at least makes it consistent between change and change all for the current word splitter.
Comment 6 Björn Michaelsen 2011-12-23 13:26:30 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 7 manj_k 2012-03-07 05:01:44 UTC
*** Bug 41251 has been marked as a duplicate of this bug. ***
Comment 8 riesslibo 2012-05-21 09:40:51 UTC
Please have a look in the new (slightly modified) example file.
The problem still exists in the same paragraph! But it is fixed in the following paragraph. The reason, why it works for the original example file is, that there is a paragraph break in the sentence.
Comment 9 riesslibo 2012-05-21 09:42:35 UTC
Created attachment 61923 [details]
a new example, where the fix is not working in the same paragraph
Comment 10 Caolán McNamara 2012-05-21 10:33:54 UTC
don't reopen old fixed bugs, file new ones. It makes it impossible to untangle things if bugs that appear to be similar get reused. There's no harm in having extra bugs that can get marked as duplicates if they turn out to be the same thing