Resolves: fdo#39347 changeall strips periods of sentences ending in error

It's really dubious to do this, but we're doing it already for "Replace", just
not for "Replace All". Might as well be equally wrong everywhere.